Downgrade Java to 11 Remove sourcests.